--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,10 @@ a, a:hover {
 #loginI:hover {
     color: blue;
 }
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
