--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ a, a:hover {
 .card-header:hover {
   background-color: #674cdd; }
 
-#loginI:hover {
+#loginButton:hover {
   color: blue; }
 
 #carouselButton {
@@ -53,3 +53,11 @@ a, a:hover {
   right: 0;
   bottom: 0;
   z-index: 100; }
+
+#reserveModal .modal-header {
+  background: #17A2B8;
+  color: white; }
+
+#loginModal .modal-header {
+  background: #901CAD;
+  color: white; }
